microservices/maintenance-service/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: maintenance-service
  labels:
    name: maintenance-service
    app: oficina
