microservices/maintenance-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maintenance-service
  namespace: maintenance-service
  labels:
    app: maintenance-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8081
      protocol: TCP
      name: http
  selector:
    app: maintenance-service
